--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,7 +25,7 @@ html { height: 100%; }
 
 body {
   color: black;
-  font-family: monospace;
+  font-family: 'Courier New', Courier, '돋움체', monospace;
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
