Adjust post paddings

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -68,7 +68,10 @@ li { margin: 0.4rem 0; }
 .w {
   max-width: 640px;
   margin: 0 auto;
-  padding: 25vh 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 33vh;
+  padding-bottom: 50vh;
 }
 
 hr {
