--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,9 +23,12 @@ html, body { background: white; }
 
 html { height: 100%; }
 
+* {
+  font-family: 'Courier New', Courier, '돋움체', monospace;
+}
+
 body {
   color: black;
-  font-family: 'Courier New', Courier, '돋움체', monospace;
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
@@ -97,6 +100,7 @@ table, th, td {
 code {
   color: white;
   background: black;
+  padding: 0.05em 0.1em;
 }
 
 code.has-jax {
