--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -128,6 +128,10 @@ img.cover {
   margin-bottom: 2rem;
 }
 
+figure {
+  margin: 4rem 0;
+}
+
 figcaption {
   text-align: center;
   opacity: 0.5;
