Render backlink in footer

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -136,3 +136,11 @@ figcaption {
   text-align: center;
   opacity: 0.5;
 }
+
+article a.backlink {
+  margin-top: 1rem;
+}
+
+a.backlink {
+  display: inline;
+}
