--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-{{ partial "back_link.html" .}}
 
 <h1>{{ .Title }}</h1>
 
 {{ .Content }}
 {{ partial "post_list.html" (dict "context" . "section" .Section)}}
+  {{- partial "footer.html" . -}}
 {{ end }}
