Make `<code>` look smaller

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -100,7 +100,8 @@ table, th, td {
 code {
   color: white;
   background: black;
-  padding: 0.05em 0.1em;
+  padding: 0.1em 0.2em;
+  font-size: 95%;
 }
 
 code.has-jax {
