--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,11 +30,13 @@ body {
   overflow-wrap: break-word;
 }
 
-.post-meta {
-  text-align: right;
-  position: absolute;
-  margin: 0;
-  right: 0;
+@media (min-width: 720px) {
+  .post-meta {
+    text-align: right;
+    position: absolute;
+    margin: 0;
+    right: 0;
+  }
 }
 
 article {
@@ -51,9 +53,15 @@ hr {
   margin: 2rem 0;
 }
 
-p {
-  margin-top: 1rem;
+p:not(.post-meta) {
+  margin-top: 0;
   margin-bottom: 0;
+  text-align: justify;
+  text-indent: 1em;
+}
+
+article > p:not(:last-child) {
+  margin-bottom: 1rem;
 }
 
 article > h1 {
@@ -61,7 +69,7 @@ article > h1 {
 }
 
 article > h1 + * {
-  margin-top: 4rem;
+  margin-top: 2rem !important;
 }
 
 li {
@@ -80,6 +88,10 @@ li {
 hr {
   text-align: center;
   border: 0;
+}
+
+article > * + hr {
+  margin-top: 1rem;
 }
 
 hr::before {
@@ -131,13 +143,28 @@ figure {
   margin: 4rem 0;
 }
 
-figcaption {
-  text-align: center;
+article > * + figure {
+  margin-top: 3rem;
+}
+
+figcaption > p {
+  margin-top: 0.5rem !important;
+  text-align: center !important;
   opacity: 0.5;
 }
 
+ol,
+ul {
+  margin-top: 0;
+}
+
+ol {
+  padding-left: 1.5em;
+}
+
 article a.backlink {
-  margin-top: 1rem;
+  margin-top: 2rem;
+  place-self: flex-start;
 }
 
 a.backlink {
