Make links have relative URLs

--- a/layouts/partials/menu_item.html
+++ b/layouts/partials/menu_item.html
@@ -2,7 +2,7 @@
     {{- range $item := .collection -}}
         <li>
             {{- with $item.url -}}
-                <a href="{{ $item.url }}">{{ safeHTML $item.title }}</a>
+                <a href="{{ $item.url | relURL }}">{{ safeHTML $item.title }}</a>
             {{- else -}}
                 {{ safeHTML $item.title }}
             {{- end -}}
