--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
   {{ $main := resources.Get "css/main.css" | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $main.Permalink | relURL }}">
   {{ if .Params.mathjax }} {{ partial "mathjax.html" . }} {{ end }}
-  <script src="https://unpkg.com/tachyonjs@2.0.0/tachyon.min.js" type="module" crossorigin defer></script>
+  <script src="https://unpkg.com/tachyonjs@2.0.0/tachyon.min.js" referrerpolicy="no-referrer" defer></script>
   {{ if templates.Exists "partials/head_includes.html" }}
     {{- partial "head_includes.html" . -}}
   {{ end }}
